# genapi

./: Cargo.toml  README.md
generated_models/: product.json  user.json
src/: main.rs
src/macros/: generate_crud_handlers.rs  generate_endpoints.rs  generate_struct.rs  helpers.rs  mod.rs
src/models/: entity_definitions.rs  mod.rs
