[package]
name = "genapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.8.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.118"
quote = "1.0"
syn = "2.0.68"
utoipa = "4.2.3"
utoipa-swagger-ui = "7.1.0"
